--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,21 @@
 
+*{
+  margin: 0;
+  padding: 0;
+}
 .table {
+  
   border-collapse: collapse;/*juntamos los border por td y la tabla en si en uno solo*/
-  width: 100%;
+  width: 93%;
   border: 3px solid WHITE;
   border-radius: 5px;
+  padding: 40px;
+  margin-top: 25px;
+  margin-bottom: 35px;
+}
+.centrar{
+  text-align: center;
+  align-content: center;
 }
 .th{
 height: 30px;
@@ -42,44 +54,19 @@ input{
 }
 
 label {
-  display: inline-block;
+ 
+  text-align: center;
+  display: block;
   margin: .5em 0;
   color: black;
   font-weight: bold;
-  text-align:left;
+  
   font-family: 'Times New Roman', Times, serif;
   width: 90px;
 }
-button {
-  font-family: Arial;
-  background-color: #215c75;
-  color:white;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 9px;
-  cursor: pointer; cursor: hand;
-  width:140px;
-  font-size: 18px;
-}
-.botonazul{
-  font-family: Arial;
-  background-color: #215c75;
-  color:white;
-  border: none;
-  padding: 10px 5px;
-  border-radius: 9px;
-  cursor: pointer; cursor: hand;
-  width:140px;
-  font-size: 18px;
-  text-decoration: none;
-  margin: 10px;
-  display: block;
-  text-align: center;
-}
-.botonazul:hover{
-  color: black;
-  background-color:lightblue ;
-}
+
+
+
 .imprimir{
  float: right;
  margin:20px;
@@ -87,10 +74,7 @@ button {
 .importe{
   margin:20px;
  }
-button:hover {
-  color: black;
-  background-color:lightblue ;
-}
+/* 
 .pagination{
   display: inline-block;
 }
@@ -104,8 +88,11 @@ button:hover {
     text-decoration: none;
     border-radius: 5px;
     background: fuchsia;
-    border: 1px solid #ddd; /* Gray */
-}
+    border: 1px solid #ddd; /* Gray *
+    }
+    /
+
+
 .pagination li a:hover{
   color: black;
   float: left;
@@ -117,19 +104,23 @@ button:hover {
 .pagination li a.active{
   background-color: #4CAF50;
     color: white;
+} */
+.margen{
+  
+  margin-right: 200px;
 }
 h3{
-  background-color: lightblue;
-  color: black;
-	padding: 12px;
+  background-color:black;
+  color:  lightblue;
+	padding: 20px;
 	text-align: center;
 	font-weight: 100;
-	font-size: 25px;
+	font-size: 28px;
   width : 50%;
   margin: 0 auto;
   width:100%;
   font-weight: bold;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Exo', sans-serif;
 }
 select {
   width: 150%;
@@ -140,9 +131,41 @@ select {
   margin:auto 0;
 
 }
+.botonazul{
+  margin-top: 30px;
+}
+.botonazul2{
+  margin-top: 10px;
+}
+h4{
+  font-size: 32px;
+  color: #215c75;
+}
+.material-icons{
+  font-size: 40px;
+}
+.negro{
+  color: black;
+}
+.datos{
+  margin-bottom: 15px;
+  margin-top: 10px;
+}
+.Alumno{
+  color: #215c75;
+  
+}
+.center{
+  text-align: center;
+}
+.checkbox{
+  
+}
 .SplitPane {
   width: 100%;
   height: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .SplitPane-left {
